--- a/src/cc-h5/index.html
+++ b/src/cc-h5/index.html
@@ -25,7 +25,7 @@
 <body>
     <div style="margin: auto;width: 100%;height: 100%;" class="egret-player"
          data-entry-class="Main"
-         data-orientation="auto"
+         data-orientation="landscape"
          data-scale-mode="showAll"
          data-frame-rate="30"
          data-content-width="1136"
