--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
                     white 100%);
             background-repeat: repeat;
             background-size: 20px 20px;
+            max-width: max-content;
+            margin: auto;
         }
 
         canvas {
@@ -20,6 +22,7 @@
         }
     </style>
 </head>
+
 <script type="module">
     import init from './cube-collection.js'
     init()
