--- a/index.html
+++ b/index.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8" />
     <style>
         body {
-            background: linear-gradient(135deg,
-                    white 0%,
-                    white 49%,
-                    black 49%,
-                    black 51%,
-                    white 51%,
-                    white 100%);
-            background-repeat: repeat;
-            background-size: 20px 20px;
+            background-image: url(data:image/gif;base64,R0lGODlhBgAGAJEAAAAAAP///9zg4////yH5BAEAAAMALAAAAAAGAAYAAAIJ3HSGu+nXUFoFADs=);
+            background-attachment: fixed;
             max-width: max-content;
             margin: auto;
         }
 
         canvas {
             background-color: white;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 128px rgba(0, 0, 0, 0.04) inset;
+            margin-top: max(50vh - 360px, 0px);
         }
     </style>
 </head>
